<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:clipToPadding="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    tool:viewBindingIgnore="false"
    android:orientation="vertical">
<!-- android:background="@color/color_ffffff"-->
  <RelativeLayout android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/close"
        android:src="@drawable/close"
        android:layout_width="60dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="TODO" android:padding="16dp"
        android:layout_height="60dp" />

    <ImageView
        android:id="@+id/setting"
        android:src="@drawable/ic_settings_black_36dp"
        android:layout_width="60dp"
        android:layout_alignParentRight="true"
        android:contentDescription="TODO" android:padding="16dp"
        android:layout_height="60dp" />
  </RelativeLayout>






  <ImageView
      android:id="@+id/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:contentDescription="TODO" android:drawablePadding="10dp"

      android:gravity="center_vertical"

      />

  <LinearLayout
      android:id="@+id/body"
      android:layout_width="match_parent"
      android:layout_height="210dp"
      android:layout_below="@+id/logo"
      android:layout_marginTop="30dp"
      android:orientation="vertical"
      android:paddingLeft="10dp"
      android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="13dp">


      <!--android:textCursorDrawable="@drawable/edittext_cursor"-->
      <AutoCompleteTextView
          android:id="@+id/et_mobile"
          android:layout_width="0dp"
          android:layout_height="55dp"
          android:layout_weight="1"

          android:hint="@string/hint_login_username"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:maxLines="1"
          android:dropDownHorizontalOffset="10dp"
          android:background="@null"

          android:drawableLeft="@drawable/ic_person_outline_white_24dp"
          android:drawablePadding="@dimen/padding_half"

          android:padding="@dimen/padding_half"


          android:textSize="@dimen/textsize_normal" />

      <ImageView
          android:id="@+id/iv_clean_phone"
          android:layout_width="40dp"
          android:layout_height="fill_parent"
          android:contentDescription="TODO" android:scaleType="centerInside"
          android:src="@drawable/ic_clear"
          android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/theme_color_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="13dp">



      <EditText
          android:id="@+id/et_password"
          android:layout_width="0dp"
          android:layout_height="55dp"
          android:layout_weight="1"
          android:background="@null"
          android:hint="@string/hint_login_password"
          android:inputType="textPassword"
          android:maxLength="30"
          android:maxLines="1"
          android:singleLine="true"
          android:text=""
          android:drawableStart="@drawable/ic_lock_outline_white_24dp"
          android:drawablePadding="@dimen/padding_half"
          android:padding="@dimen/padding_half"
          android:imeOptions="actionGo"
          android:imeActionLabel="登录"
          android:textSize="@dimen/textsize_normal" />

      <ImageView
          android:id="@+id/clean_password"
          android:layout_width="40dp"
          android:layout_height="fill_parent"
          android:contentDescription="TODO" android:scaleType="centerInside"
          android:src="@drawable/ic_clear"
          android:visibility="gone" />

      <ImageView
          android:id="@+id/iv_show_pwd"
          android:layout_width="40dp"
          android:layout_height="fill_parent"
          android:contentDescription="TODO"
          android:scaleType="centerInside"
          android:src="@drawable/pass_gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/theme_color_primary" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:background="@drawable/selector_login"

        android:gravity="center"
        android:text="@string/login"

        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large" />
    <!--<Button-->
        <!--android:id="@+id/btn_login"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginTop="21dp"-->
        <!--android:background="@drawable/bg_btn_login_selected"-->
        <!--android:text="@string/login"-->
        <!--android:textColor="@color/color_ffffff"-->
        <!--android:textSize="18dp" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/regist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="20dp"
          android:text="注册新用户"

          android:textColor="@color/md_blue_900"
          android:textSize="14dp" />
      <TextView
          android:id="@+id/fingerprint"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"

          android:text="指纹登录"

          android:textColor="@color/md_blue_900"
          android:textSize="14dp" />
      <TextView
          android:id="@+id/forget_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginRight="20dp"
          android:layout_alignParentRight="true"
          android:text="@string/login_forget_pwd"

          android:textColor="@color/md_red_900"
          android:textSize="14dp" />
    </RelativeLayout>
  </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_b0b8b2"
        android:text="版本号："
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/service"
        android:id="@+id/tv_imei"/>
    <LinearLayout
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:text="联系客服"
          android:textColor="@color/color_b0b8b2"
          android:textSize="14dp" />

      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:background="@color/color_eeeeee" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:text="关于我们"
          android:textColor="@color/color_b0b8b2"
          android:textSize="14dp" />

      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:background="@color/color_eeeeee" />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:text="关于我们"
          android:id="@+id/tv_version"
          android:textColor="@color/color_b0b8b2"
          android:textSize="14dp" />
    </LinearLayout>
    <Switch
        android:text="默认主题"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:id="@+id/app_theme"/>
  </RelativeLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="关键字："
        android:layout_gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_keywork"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="输入关键字"

          android:singleLine="true"
          android:ellipsize="end"

          android:textSize="@dimen/ground_truth_text_size_expanded" />
    </com.google.android.material.textfield.TextInputLayout>


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="日期："
        android:layout_gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:datePickerMode="calendar"
            android:text="选择日期"
            android:id="@+id/date_picker_actions"
            android:layout_height="wrap_content"/>
  </LinearLayout>

  <Button
      android:layout_width="match_parent"
      android:id="@+id/btn_create_code"
      android:text="生成代码"
      android:layout_height="wrap_content"/>
</LinearLayout>