<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText android:layout_width="match_parent" android:inputType="" 
            android:layout_height="wrap_content"
            android:hint="请输入用户名"
           android:id="@+id/edit_name"/>

  <EditText android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="请输入年龄"
      android:inputType="numberSigned"
      android:id="@+id/edit_age"/>
</LinearLayout>