<resources>




    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="empty_title">""</string>


    <string name="open">开</string>
    <string name="close">关</string>
    <string name="splash_version">V %1$s</string>
...
